# greentea

./: .gitignore  LICENSE-MIT  README.md  foot.ini  greentea.py  index.html  package-lock.json  package.json  requirements.txt  serve.sh  test_greentea.py  vite.config.js  web.sh  web_server.py
companion/: greentea-ask
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/ai/: context-bus.js  sidebar.js  suggestions.js
templates/: index.html
walker/themes/paint/: style.css
