[package]
name = "greentea"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
anyhow = "1"

# Pure Wayland: no x11 feature enabled, keeps XWayland out of the picture

[lib]
name = "greentea_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
